package com.napier.devops;

import java.sql.*;
import java.util.ArrayList;

public class App {
    // Connection to MySQL database
    private Connection con = null;

    // Connect to the MySQL database
    public void connect() {
        try {
            // Load Database driver
            Class.forName("com.mysql.cj.jdbc.Driver");
        } catch (ClassNotFoundException e) {
            System.out.println("Could not load SQL driver");
            System.exit(-1);
        }

        int retries = 30;
        for (int i = 0; i < retries; i++) {
            System.out.println("Connecting to database...");
            try {
                Thread.sleep(5000);

                // Determine host: use DB_HOST environment variable if available
                String host = System.getenv("DB_HOST");
                if (host == null) host = "db"; // IMPORTANT: service name, not localhost

                con = DriverManager.getConnection(
                        "jdbc:mysql://" + host + ":3306/employees?allowPublicKeyRetrieval=true&useSSL=false",
                        "root",
                        "example"
                );

                System.out.println("Successfully connected");
                return;
            } catch (SQLException sqle) {
                System.out.println("Failed to connect attempt " + i + sqle.getMessage());
            } catch (InterruptedException ie) {
                System.out.println("Thread interrupted? Should not happen.");
            }
        }
    }

    // Disconnect from the MySQL database
    public void disconnect() {
        if (con != null) {
            try {
                con.close();
                System.out.println("Disconnected from database");
            } catch (SQLException e) {
                System.out.println("Error closing connection: " + e.getMessage());
            }
        }
    }

    public Employee getEmployee(int ID) {
        try {
            // Create an SQL statement
            Statement stmt = con.createStatement();

            // Create SQL query
            String strSelect =
                    "SELECT e.emp_no, e.first_name, e.last_name, "
                    + "t.title, s.salary, d.dept_name, CONCAT(m.first_name,' ',m.last_name) AS manager "
                    + "FROM employees e "
                    + "LEFT JOIN titles t ON e.emp_no = t.emp_no AND t.to_date = '9999-01-01' "
                    + "LEFT JOIN salaries s ON e.emp_no = s.emp_no AND s.to_date = '9999-01-01' "
                    + "LEFT JOIN dept_emp de ON e.emp_no = de.emp_no AND de.to_date = '9999-01-01' "
                    + "LEFT JOIN departments d ON de.dept_no = d.dept_no "
                    + "LEFT JOIN dept_manager dm ON d.dept_no = dm.dept_no AND dm.to_date = '9999-01-01' "
                    + "LEFT JOIN employees m ON dm.emp_no = m.emp_no "
                    + "WHERE e.emp_no = " + ID;

            // Execute SQL statement
            ResultSet rset = stmt.executeQuery(strSelect);

            // If a result was found
            if (rset.next()) {
                Employee emp = new Employee();
                emp.emp_no = rset.getInt("emp_no");
                emp.first_name = rset.getString("first_name");
                emp.last_name = rset.getString("last_name");
                emp.title = rset.getString("title");
                emp.salary = rset.getInt("salary");
                emp.dept_name = rset.getString("dept_name");
                return emp;
            } else
                return null;
        } catch (Exception e) {
            System.out.println(e.getMessage());
            System.out.println("Failed to get employee details");
            return null;
        }
    }

    /**
     * Gets all the current employees and salaries.
     * @return A list of all employees and salaries, or null if there is an error.
     */
    public ArrayList<Employee> getAllSalaries()
    {
        try
        {
            // Create an SQL statement
            Statement stmt = con.createStatement();
            // Create string for SQL statement
            String strSelect =
                    "SELECT employees.emp_no, employees.first_name, employees.last_name, salaries.salary "
                            + "FROM employees, salaries "
                            + "WHERE employees.emp_no = salaries.emp_no AND salaries.to_date = '9999-01-01' "
                            + "ORDER BY employees.emp_no ASC";
            // Execute SQL statement
            ResultSet rset = stmt.executeQuery(strSelect);
            // Extract employee information
            ArrayList<Employee> employees = new ArrayList<Employee>();
            while (rset.next())
            {
                Employee emp = new Employee();
                emp.emp_no = rset.getInt("employees.emp_no");
                emp.first_name = rset.getString("employees.first_name");
                emp.last_name = rset.getString("employees.last_name");
                emp.salary = rset.getInt("salaries.salary");
                employees.add(emp);
            }
            return employees;
        }
        catch (Exception e)
        {
            System.out.println(e.getMessage());
            System.out.println("Failed to get salary details");
            return null;
        }
    }

    public Department getDepartment(String dept_name) {
        try {
            Statement stmt = con.createStatement();

            // Correct SQL with spaces and proper table names
            String strSelect =
                    "SELECT d.dept_no, d.dept_name " +
                            "FROM departments d " +
                            "WHERE d.dept_name = '" + dept_name + "'";

            ResultSet rset = stmt.executeQuery(strSelect);

            if (rset.next()) {
                Department dep = new Department();
                dep.dept_no = rset.getString("dept_no");
                dep.dept_name = rset.getString("dept_name");
                return dep;
            } else {
                return null;
            }

        } catch (Exception e) {
            System.out.println(e.getMessage());
            System.out.println("Failed to get department details");
            return null;
        }
    }

    public ArrayList<Employee> getSalariesByDepartment(Department dept) {
        ArrayList<Employee> employees = new ArrayList<>();
        try {
            Statement stmt = con.createStatement();

            String strSelect =
                    "SELECT e.emp_no, e.first_name, e.last_name, t.title, s.salary " +
                            "FROM employees e " +
                            "JOIN dept_emp de ON e.emp_no = de.emp_no " +
                            "JOIN salaries s ON e.emp_no = s.emp_no " +
                            "JOIN titles t ON e.emp_no = t.emp_no " +
                            "WHERE de.dept_no = '" + dept.dept_no + "' " +
                            "AND s.to_date = '9999-01-01' " + // current salary
                            "AND t.to_date = '9999-01-01'" // current title
                            + "ORDER BY e.emp_no ASC";

            ResultSet rset = stmt.executeQuery(strSelect);

            while (rset.next()) {
                Employee emp = new Employee();
                emp.emp_no = rset.getInt("emp_no");
                emp.first_name = rset.getString("first_name");
                emp.last_name = rset.getString("last_name");
                emp.title = rset.getString("title");
                emp.salary = rset.getInt("salary");

                employees.add(emp);
            }

            return employees;
        } catch (Exception e) {
            System.out.println(e.getMessage());
            System.out.println("Failed to get salary details");
            return null;
        }
    }





    public void displayEmployee(Employee emp)
    {
        if (emp != null)
        {
            System.out.println(
                    emp.emp_no + " "
                            + emp.first_name + " "
                            + emp.last_name + "\n"
                            + emp.title + "\n"
                            + "Salary:" + emp.salary + "\n"
                            + emp.dept_name + "\n"
                            + "Manager: " + emp.manager + "\n");
        }
    }

    /**
     * Prints a list of employees.
     * @param employees The list of employees to print.
     */
    public void printSalaries(ArrayList<Employee> employees)
    {
        // Print header
        System.out.println(String.format("%-10s %-15s %-20s %-8s", "Emp No", "First Name", "Last Name", "Salary"));
        // Loop over all employees in the list
        for (Employee emp : employees)
        {
            String emp_string =
                    String.format("%-10s %-15s %-20s %-8s",
                            emp.emp_no, emp.first_name, emp.last_name, emp.salary);
            System.out.println(emp_string);
        }
    }


    public static void main(String[] args) {
        App a = new App();

        // Connect to the database
        a.connect();

        // Get an employee by ID
        Employee emp = a.getEmployee(10001); // you can change ID if needed

        // Display Results
        a.displayEmployee(emp);

        // Get depertment
        Department dept = a.getDepartment("Sales");

        // Get all employees and their salaries in that department
        ArrayList<Employee> employees2 = a.getSalariesByDepartment(dept);

        for (Employee e : employees2) {
            System.out.println(
                    e.emp_no + " | " +
                    e.first_name + " " + e.last_name + " | " +
                    e.title + " | " +
                    e.salary
            );
        }


        // Display basic info for now
        if (emp != null) {
            System.out.println("Employee Found:");
            System.out.println(emp.emp_no + " - " + emp.first_name + " " + emp.last_name);
        } else {
            System.out.println("No employee found.");
        }

        // Extract employee salary information
        ArrayList<Employee> employees = a.getAllSalaries();
        a.printSalaries(employees);

        // Test the size of the returned data - should be 240124
        System.out.println(employees.size());

        // Disconnect
        a.disconnect();
    }
}