package com.napier.devops;

public class Department {

    public String dept_no;
    public String dept_name;
    public Employee manager; // Creating new manager.









}
